--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1 class="title">Get Shit Done</h1>
+    <h2 class="task-title">Lists</h2>
+    <ul>
+      <li class="task-name">Work</li>
+      <li class="task-name">Grocery</li>
+      <li class="task-name">Play</li>
+    </ul>
+  </body>
+</html>
