--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
+    <title>To Do</title>
   </head>
   <body>
-    <h1 class="title">Get Shit Done</h1>
-    <h2 class="task-title">Lists</h2>
-    <ul>
-      <li class="task-name">Work</li>
-      <li class="task-name">Grocery</li>
-      <li class="task-name">Play</li>
+    <h1 class="title main-font center">Get Shit Done</h1>
+    <h2 class="todo-title main-font">To Do's</h2>
+    <ul class="task-list" data-lists>
+      <li class="todo-name main-font data-todos">Work</li>
+      <li class="todo-name main-font data-todos">Grocery</li>
+      <li class="todo-name main-font data-todos">Play</li>
     </ul>
   </body>
 </html>
