added more li's

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
       rel="stylesheet"
       href="css/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
@@ -32,8 +31,14 @@
             <i class="fa fa-circle-thin co"></i>
             <span>to do task 1</span>
           </li>
-          <li class="todo-name main-font data-todos fa-camera">Grocery</li>
-          <li class="todo-name main-font data-todos">Play</li>
+          <li class="todo-name main-font data-todos">
+            <i class="fa fa-circle-thin co"></i>
+            <span>Grocery</span>
+          </li>
+          <li class="todo-name main-font data-todos">
+            <i class="fa fa-circle-thin co"></i>
+            <span>Play</span>
+          </li>
         </ul>
       </div>
     </div>
