--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
       href="css/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="css/style.css" />
+    <!-- <link rel="stylesheet" href="css/style.css" /> -->
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
@@ -25,6 +25,12 @@
       <div class="subHeader flexContainer">
         <h2 class="todo-title main-font center">To Do's</h2>
       </div>
+
+      <form action="/addtodo" method="POST">
+        <input type="text" placeholder="Add a To Do" name="Add a To Do" />
+        <button type="submit" class="submitButton">Submit</button>
+      </form>
+
       <div class="to-do-list flexContainer">
         <ul class="task-list center" data-lists>
           <li class="todo-name main-font data-todos">
