--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
         <h2 class="todo-title main-font center">To Do's</h2>
       </div>
 
-      <form action="/addtodo" method="POST">
-        <input type="text" placeholder="Add a To Do" name="Add a To Do" />
+      <!-- <form action="/addtodo" method="POST">
+        <input type="text" placeholder="Add a To Do" name="todo" />
         <button type="submit" class="submitButton">Submit</button>
-      </form>
+      </form> -->
 
-      <div class="to-do-list flexContainer">
+      <!-- <div class="to-do-list flexContainer">
         <ul class="task-list center" data-lists>
           <li class="todo-name main-font data-todos">
             <i class="fa fa-circle-thin co"></i>
@@ -46,7 +46,7 @@
             <span>Play</span>
           </li>
         </ul>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
