attempted check toggle

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       rel="stylesheet"
-      href="css/font-awesome-4.7.0/css/font-awesome.min.css"
+      href="public/css/font-awesome-4.7.0/css/font-awesome.min.css"
     />
-    <!-- <link rel="stylesheet" href="css/style.css" /> -->
+    <link rel="stylesheet" href="public/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400&display=swap"
       rel="stylesheet"
@@ -43,7 +43,7 @@
         </ul>
       </div>
 
-      <form action="/addtodo" method="POST">
+      <form class="center" action="/addtodo" method="POST">
         <input type="text" placeholder="Add a To Do" name="todo" />
         <button type="submit" class="submitButton">Submit</button>
       </form> -->
